fixed (so-so) picture of GDay

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="player-container">
         <!-- Song -->
         <div class="img-container">
-            <img src="img/GDay-1.jpg" alt="Girl's Day">
+            <img src="img/GDay-FemalePres.jpg" alt="Girl's Day">
         </div>
         <h2 id="title">Female President</h2>
         <h3 id="artist">Girl's Day</h3>
